fix #871 use the varName for the replacement map of the headerName